--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 			<h1>WebExtention</h1>
 			<h2>Task</h2>
 			<ul>
-				<p><li><a href="WebExtention/chapter02/ch02-firsthtml-linux.html">chapter02</a></li></p>
-				<p><li><a href="WebExtention/chapter03/ch03-markuptag1.html">chapter03</a></li></p>
-				<p><li><a href="WebExtention/chapter04/ch04-markuptag.html">chapter04</a></li></p>
-				<p><li><a href="WebExtention/chapter05/ch05-markuptag2.html">chapter05</a></li></p>
-				<p><li><a href="WebExtention/chapter06/index.html">chapter06</a></li></p>
-				<p><li><a href="WebExtention/chapter07/ch07-fontstyle.html">chapter07</a></li></p>
-				<p><li><a href="WebExtention/chapter08/ch-08linking.html">chapter08</a></li></p>
-				<p><li><a href="WebExtention/chapter09/ch09-boxcss.html">chapter09</a></li></p>
-				<p><li><a href="WebExtention/chapter10/ch10-tanle.html">chapter10</a></li></p>
+				<p><li><a href="chapter02/ch02-firsthtml-linux.html">chapter02</a></li></p>
+				<p><li><a href="chapter03/ch03-markuptag1.html">chapter03</a></li></p>
+				<p><li><a href="chapter04/ch04-markuptag.html">chapter04</a></li></p>
+				<p><li><a href="chapter05/ch05-markuptag2.html">chapter05</a></li></p>
+				<p><li><a href="chapter06/index.html">chapter06</a></li></p>
+				<p><li><a href="chapter07/ch07-fontstyle.html">chapter07</a></li></p>
+				<p><li><a href="chapter08/ch-08linking.html">chapter08</a></li></p>
+				<p><li><a href="chapter09/ch09-boxcss.html">chapter09</a></li></p>
+				<p><li><a href="chapter10/ch10-tanle.html">chapter10</a></li></p>
 		</section>
 	</article>
 </body>
