--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 				<p><li><a href="chapter04/ch04-markuptag.html">chapter04</a></li></p>
 				<p><li><a href="chapter05/ch05-markuptag2.html">chapter05</a></li></p>
 				<p><li><a href="chapter06/index.html">chapter06</a></li></p>
-				<p><li><a href="chapter07/ch07-fontstyle.html">chapter07</a></li></p>
-				<p><li><a href="chapter08/ch-08linking.html">chapter08</a></li></p>
+				<p><li><a href="chapter07/ch07-fontsytle.html">chapter07</a></li></p>
+				<p><li><a href="chapter08/ch08-linkimg.html">chapter08</a></li></p>
 				<p><li><a href="chapter09/ch09-boxcss.html">chapter09</a></li></p>
-				<p><li><a href="chapter10/ch10-tanle.html">chapter10</a></li></p>
+				<p><li><a href="chapter10/ch10-table.html">chapter10</a></li></p>
 		</section>
 	</article>
 </body>
