--- a/Task01/cyber-security.html
+++ b/Task01/cyber-security.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
 <meta charset="utf-8">
-<meta name="description" content="ITは、すべての仕事につながる世界。IT・デジタルコンテンツを基礎から学ぶ、沖縄の専門学校! アイカレ!!"
+<meta name="description" content="ITは、すべての仕事につながる世界。IT・デジタルコンテンツを基礎から学ぶ、沖縄の専門学校! アイカレ!!">
 <link rel="stylesheet" href="style.css">
 <title>サイバーセキュリティ科</title>
 
 </head>
 <body>
-	<article>
+	<header>
+		<div class="container">
+			<div class="header-inner">
 	<div class="float-clear">
 		<div class="float-box">
-			<img src="../../../Pictures/ITlogo.png" width="660" height="84" alt="">
+			<img src="../../../Pictures/logo/logo.png" width="300" height="60" alt="itlogo">
 		</div>
-		<p><strong>ITは、すべての仕事につながる世界。</strong>
-		IT・デジタルコンテンツを基礎から学ぶ、沖縄の専門学校</p>
+		<p>ITは、すべての仕事につながる世界。</p>
 	</div>
 
 	<div class="breadcrumb">
         <ol>
-		<li><a href="https://www.it-college.ac.jp/">ホーム</a></li>
-                <li><a href="https://www.it-college.ac.jp/depts/">学科紹介</a></li>
+		<li><a href="index.html">ホーム</a></li>
+                <li><a href="it-specialist.html">ITスペシャリスト科</a></li>
                 <li>サイバーセキュリティ科</li>
         </ol>
 </div>
@@ -40,7 +41,7 @@
 	<li>ネットワークエンジニア</li>
 	<li>サーバーエンジニア</li>
 	<li>カスタマーエンジニア</li>
-	<li>インフラエンジニア</li>
+	<li>インフラエンジニアなど</li>
 </ul>
 	</div>
 	<div class="item">
@@ -60,17 +61,19 @@
 	</div>
 </div>
 
+<div class="pc">
 <h3>各自へノートPCを配布</h3>
 <p>入学と同時に各自へノートPCを配布するので、自宅にPCがなくても大丈夫！
 学校の機材+自分だけの専用ノートPCで、さらに技術UP！</p>
+</div>
 
 <div class="wrapper">
         <div class="item1">
-		<img src="../../../Pictures/cs1.jpg" width="600" height="400" alt="">
+		<img src="../../../Pictures/cs1.jpg" width="350" height="250" alt="cs1">
 		<p>充実した実習素材に直接ふれることで、より実践に即した授業内容になっています。</p>
 	</div>
 	<div class="item1">
-		<img src="../../../Pictures/cs2.jpg" width="600" height="400" alt="">
+		<img src="../../../Pictures/cs2.jpg" width="350" height="250" alt="cs2">
 		<p>インターネットを使って提供されるサービスの基盤となる「クラウド」を支える技術も学びます。</p>
 	</div>
 </div>
@@ -78,25 +81,31 @@
 <section>
 <h3>学ぶこと</h3>
 
-<P>●サイバーセキュリティ
-セキュリティを学習するうえでは様々な技術・知識が必要となります。この講義ではSEA/Jの公式教材を用いてネットワークやファイヤーウォール、侵入検知システム、VPNなどのアクセスコントロールや機密性確保に必要な技術などを習得します。またハッキング用のラボを用いて、様々なハッキング手段を学ぶことでセキュリティを理解し、強固なシステムを構築できるようになります。</p>
-<p>●クラウドコンピューティング
-Webサービスやオンラインゲームのバックエンドとして欠かせないものとなっている「クラウド」。この講義ではAWS(Amazon Web Service)やGCP(Google Cloud Platform)などを使用して、ネットワーク経由でのコンピューティング、データベース、ストレージ、アプリケーションなど様々なサービスを構築・管理・開発を行うインフラエンジニアの基礎を習得します。</p>
-<p>●仮想化技術
-ソフウェアによって仮想化されることにより自由に設計でき柔軟性の高いシステムを構築できる「仮想化技術」。仮想化技術を使うことで複数のサーバやOS、開発環境の構築や設定を何度でも手軽にできるようになります。この講義では、実際の環境を使用し学ぶことにより就職した際の強い自信にも繋がります。</p>
+<b>●サイバーセキュリティ</b>
+<p>セキュリティを学習するうえでは様々な技術・知識が必要となります。この講義ではSEA/Jの公式教材を用いてネットワークやファイヤーウォール、侵入検知システム、VPNなどのアクセスコントロールや機密性確保に必要な技術などを習得します。またハッキング用のラボを用いて、様々なハッキング手段を学ぶことでセキュリティを理解し、強固なシステムを構築できるようになります。</p>
+
+<b>●クラウドコンピューティング</b>
+<p>Webサービスやオンラインゲームのバックエンドとして欠かせないものとなっている「クラウド」。この講義ではAWS(Amazon Web Service)やGCP(Google Cloud Platform)などを使用して、ネットワーク経由でのコンピューティング、データベース、ストレージ、アプリケーションなど様々なサービスを構築・管理・開発を行うインフラエンジニアの基礎を習得します。</p>
+
+<b>●仮想化技術</b>
+	<p>ソフウェアによって仮想化されることにより自由に設計でき柔軟性の高いシステムを構築できる「仮想化技術」。仮想化技術を使うことで複数のサーバやOS、開発環境の構築や設定を何度でも手軽にできるようになります。この講義では、実際の環境を使用し学ぶことにより就職した際の強い自信にも繋がります。</p>
 
 <h3>カリキュラム</h3>
 
-<p>●Linux
-開発現場で使われているサーバ向けOSであるLinuxについて学習。具体的にはファイルシステムの構築、基本コマンド、ユーザー管理、シェルプログラミングなど、サーバ管理者としての基本操作方法を学びます。</p>
-<p>●セキュリティ応用
-SEA/J CSPMの公式トレーニングを用いてITスキル標準(ITSS)の情報セキュリティ分野レベル2〜4に対応したファイアウォール、侵入検知システム、VPNなどのアクセスコントロールや機密性確保に必要な知識、技術を習得します。</p>
-<p>●クラウドコンピューティング
-Webサービスやオンラインゲームのバックエンドとして欠かせないものとなっているクラウドコンピューティングをAWS(Amazon Web Service)を操作し構築や管理を行いインフラエンジニアの基礎を習得します。</p>
-<p>●インターネットサーバ構築
-LAMP[Linux、Apache HTTP Server(Webサーバ)、MySQL(データベース)、Perl、PHP、Python(プログラミング言語)の頭文字をつなげた用語]環境の構築・設定はインターネットサーバ構築業務に欠かせないものであり、アイカレで実践的に学ぶことにより就職した際に強い自信に繋がります。アイカレでは、このWebアプリケーションの基盤となるオープンソースソフトウェアの組み合わせを、実習を通して効率良く身に付けます。</p>
-<p>●ネットワーク ●シェルスクリプト ●サーバ管理 ●PHP ●プレゼンテーション ●ビジネス教養 ●卒業研究
-※その他、様々なIT系カリキュラムがあります。</p>
+<b>●Linux</b>
+<p>開発現場で使われているサーバ向けOSであるLinuxについて学習。具体的にはファイルシステムの構築、基本コマンド、ユーザー管理、シェルプログラミングなど、サーバ管理者としての基本操作方法を学びます。</p>
+
+<b>●セキュリティ応用</b>
+<p>SEA/J CSPMの公式トレーニングを用いてITスキル標準(ITSS)の情報セキュリティ分野レベル2〜4に対応したファイアウォール、侵入検知システム、VPNなどのアクセスコントロールや機密性確保に必要な知識、技術を習得します。</p>
+
+<b>●クラウドコンピューティング</b>
+<p>Webサービスやオンラインゲームのバックエンドとして欠かせないものとなっているクラウドコンピューティングをAWS(Amazon Web Service)を操作し構築や管理を行いインフラエンジニアの基礎を習得します。</p>
+
+<b>●インターネットサーバ構築</b>
+<p>LAMP[Linux、Apache HTTP Server(Webサーバ)、MySQL(データベース)、Perl、PHP、Python(プログラミング言語)の頭文字をつなげた用語]環境の構築・設定はインターネットサーバ構築業務に欠かせないものであり、アイカレで実践的に学ぶことにより就職した際に強い自信に繋がります。アイカレでは、このWebアプリケーションの基盤となるオープンソースソフトウェアの組み合わせを、実習を通して効率良く身に付けます。</p>
+
+<b>●ネットワーク ●シェルスクリプト ●サーバ管理 ●PHP ●プレゼンテーション ●ビジネス教養 ●卒業研究</b>
+<p>※その他、様々なIT系カリキュラムがあります。</p>
 
 
 <h3>目標資格</h3>
@@ -117,21 +126,21 @@ LAMP[Linux、Apache HTTP Server(Webサーバ)、MySQL(データベース)、Perl
 	</div>
 	<div class="item2">
 		<a href="https://www.comptia.jp/">
-			<img src="../../../Pictures/logo-strata.png" width="120" height="62" alt="">
+			<img src="../../../Pictures/logo-strata.png" width="120" height="62" alt="logo-strata">
 		</a>
 		<p>CompTIA Strata
 IT Fundamentals</p>
 	</div>
 	<div class="item2">
-		<a href="https://www.comptia.jp/" width="120" height="62" alt="">
-		<img src="../../../Pictures/logo-cloud.png">
+		<a href="https://www.comptia.jp/">
+		<img src="../../../Pictures/logo-cloud.png"  width="120" height="62" alt="comptia">
 		</a>
 		<p>CompTIA
 Cloud Essentials</p>
 	</div>
 	<div class="item2">
 		<a href="https://www.comptia.jp/">
-			<img src="../../../Pictures/Network.png" width="120" height="62" alt="">
+			<img src="../../../Pictures/Network.png" width="120" height="62" alt="Network">
 		</a>
 		<p>CompTIA Network+</p>
 	</div>
@@ -139,8 +148,13 @@ Cloud Essentials</p>
 </section>
 <div class="float-clear">
 	<div class="float-box">
-	<img src="../../../Pictures/cs-img-toguchi.jpg" width="200" height="200" alt="">
+	<img src="../../../Pictures/cs-img-toguchi.jpg" width="200" height="200" alt="toguchi">
 	</div>
+</div>
+	<p>渡久地駿（豊見城高校卒業）</p>
+
+	<div class="item4">
+	<h4>先輩からのメッセージ</h4>
 	<h3>ホワイトハッカーってかっこいい！
 悪いクラッカーから守りたい！！</h3>
 	<p>私は高校の頃に「ホワイトハッカーってかっこいい。自分も将来、悪いクラッカーから守りたい。自由自在にパソコンを操りたい。」と思いアイカレを選びました。
@@ -152,7 +166,9 @@ Cloud Essentials</p>
 
 これからは様々な仕事にITが使われる時代になっていくと思います。
 ここで私たちと一緒に一からパソコンについて学びましょう。</p>
-
-	</article>
+	</div>
+			</div>
+		</div>
+	</header>
 </body>
 </html>
