--- a/Task03/index.html
+++ b/Task03/index.html
@@ -71,7 +71,67 @@
             </div>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <a href="it-specialist.html"><img src="img/slider-it-specialist.jpg" class="d-block w-100"
+                            alt="ITスペシャリスト科"></a>
+                </div>
+                <div class="carousel-item">
+                    <a href="cyber-security.html"><img src="img/slider-cyber-security.jpg" class="d-block w-100"
+                            alt="サイバーセキュリティ科"></a>
+                </div>
+                <div class="carousel-item">
+                    <a href="opencampus.html"><img src="img/slider-opencampus.jpg" class="d-block w-100"
+                            alt="オープンキャンパス申込"></a>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="card mt-5">
+                    <a href="it-specialist.html"><img src="img/main-it-specialist.jpg" class="card-img-top"
+                            alt="ITスペシャリスト科"></a>
+                    <div class="card-body">
+                        <h5 class="card-title"><i class="bi bi-caret-right-square-fill"></i><a href="it-specialist.html"
+                                class="link-dark text-decoration-none">ITスペシャリスト科</a></h5>
+                        <p class="card-text">しっかり学べる３年制　情報社会のスペシャリストになる</p>
+                    </div>
+                    <a href="cyber-security.html"><img src="img/main-cyber-security.jpg" class="card-img-top"
+                            alt="サイバーセキュリティ科"></a>
+                    <div class="card-body">
+                        <h5 class="card-title"><i class="bi bi-caret-right-square-fill"></i><a href="it-specialist.html"
+                                class="link-dark text-decoration-none">サイバーセキュリティ科</a></h5>
+                        <p class="card-text">ネットワークとセキュリティのプロフェッショナルを目指す！</p>
+                    </div>
+                    <a href="opencampus.html"><img src="img/main-opencampus.jpg" class="card-img-top"
+                            alt="オープンキャンパス申込"></a>
+                    <div class="card-body">
+                        <h5 class="card-title"><i class="bi bi-caret-right-square-fill"></i><a href="it-specialist.html"
+                                class="link-dark text-decoration-none">オープンキャンパス申込</a></h5>
+                        <p class="card-text">授業をプチ体験することで自分にあった進路が見えてくる！</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </main>
     <footer class="mt-5 pt-3 pb-2 bg-secondary">
         <div class="container">
             <p class="float-end">
