--- a/Task03/cyber-security.html
+++ b/Task03/cyber-security.html
@@ -118,7 +118,7 @@
         <div class="container">
             <p class="float-end">
                 <a href="#header" class="link-light text-decoration-none">Back to top <i
-                        class="bibi-arrow-up-square-fill"></i></a>
+                        class="bi bi-arrow-up-square-fill"></i></a>
             </p>
             <p>
                 <a href="https://www.it-college.ac.jp/" class="link-light text-decoration-none">Copyright &copy;2015IWT
