--- a/Task03/index.html
+++ b/Task03/index.html
@@ -70,31 +70,6 @@
                             alt="オープンキャンパス申込"></a>
                 </div>
             </div>
-            <div class="col-lg-4">
-                <div class="card mt-5">
-                    <a href="it-specialist.html"><img src="img/main-it-specialist.jpg" class="card-img-top"
-                            alt="ITスペシャリスト科"></a>
-                    <div class="card-body">
-                        <h5 class="card-title"><i class="bi bi-caret-right-square-fill"></i><a href="it-specialist.html"
-                                class="link-dark text-decoration-none">ITスペシャリスト科</a></h5>
-                        <p class="card-text">しっかり学べる３年制　情報社会のスペシャリストになる</p>
-                    </div>
-                    <a href="cyber-security.html"><img src="img/main-cyber-security.jpg" class="card-img-top"
-                            alt="サイバーセキュリティ科"></a>
-                    <div class="card-body">
-                        <h5 class="card-title"><i class="bi bi-caret-right-square-fill"></i><a href="it-specialist.html"
-                                class="link-dark text-decoration-none">サイバーセキュリティ科</a></h5>
-                        <p class="card-text">ネットワークとセキュリティのプロフェッショナルを目指す！</p>
-                    </div>
-                    <a href="opencampus.html"><img src="img/main-opencampus.jpg" class="card-img-top"
-                            alt="オープンキャンパス申込"></a>
-                    <div class="card-body">
-                        <h5 class="card-title"><i class="bi bi-caret-right-square-fill"></i><a href="it-specialist.html"
-                                class="link-dark text-decoration-none">オープンキャンパス申込</a></h5>
-                        <p class="card-text">授業をプチ体験することで自分にあった進路が見えてくる！</p>
-                    </div>
-                </div>
-            </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
                 data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -106,12 +81,52 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card mt-5">
+                        <a href="it-specialist.html"><img src="img/main-it-specialist.jpg" class="card-img-top"
+                                alt="ITスペシャリスト科"></a>
+                        <div class="card-body">
+                            <h5 class="card-title"><i class="bi bi-caret-right-square-fill"></i><a
+                                    href="it-specialist.html" class="link-dark text-decoration-none">ITスペシャリスト科</a></h5>
+                            <p class="card-text">しっかり学べる３年制　情報社会のスペシャリストになる</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card mt-5">
+                        <a href="cyber-security.html"><img src="img/main-cyber-security.jpg" class="card-img-top"
+                                alt="サイバーセキュリティ科"></a>
+                        <div class="card-body">
+                            <h5 class="card-title"><i class="bi bi-caret-right-square-fill"></i><a
+                                    href="it-specialist.html" class="link-dark text-decoration-none">サイバーセキュリティ科</a>
+                            </h5>
+                            <p class="card-text">ネットワークとセキュリティのプロフェッショナルを目指す！</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card mt-5">
+                        <a href="opencampus.html"><img src="img/main-opencampus.jpg" class="card-img-top"
+                                alt="オープンキャンパス申込"></a>
+                        <div class="card-body">
+                            <h5 class="card-title"><i class="bi bi-caret-right-square-fill"></i><a
+                                    href="it-specialist.html" class="link-dark text-decoration-none">オープンキャンパス申込</a>
+                            </h5>
+                            <p class="card-text">授業をプチ体験することで自分にあった進路が見えてくる！</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
     </main>
     <footer class="mt-5 pt-3 pb-2 bg-secondary">
         <div class="container">
             <p class="float-end">
                 <a href="#header" class="link-light text-decoration-none">Back to top <i
-                        class="bibi-arrow-up-square-fill"></i></a>
+                        class="bi bi-arrow-up-square-fill"></i></a>
             </p>
             <p>
                 <a href="https://www.it-college.ac.jp/" class="link-light text-decoration-none">Copyright &copy;2015IWT
